Finished UPDATE and refc code

--- a/src/apps/templates/home/home.html
+++ b/src/apps/templates/home/home.html
@@ -1,15 +1,16 @@
 {% extends 'layout/nav.html'%}
 
 {% block content %}
-<form id="form">
+<form >
     <input type="text">
     <button>SUB</button>
 </form>
+
+
 {% endblock content %}
 
 {% block js %}
-<script src="{{ASSETS_ROOT}}/js/home/example.js" type="text/javascript"></script>
+
 {% endblock js %}
 
-<!-- <link type="text/css" href="{{ ASSETS_ROOT }}/css/custom.css" rel="stylesheet"> -->
 
