--- a/src/apps/templates/home/signup.html
+++ b/src/apps/templates/home/signup.html
@@ -7,14 +7,9 @@
     <input type="submit" name="" id="">
 </form>
 
-<ul>
-    {% for err in errors.values %}
-    {% if err != '' %}
-    <li>{{err}}</li>
-    {%endif%}
-    {% endfor %}
-    <li id="err-500" hidden>Los datos enviados son invalidos o el servidor no esta respondiendo.</li>    
-</ul>
+{% for err in errors %}
+{{err}}
+{% endfor %}
 
 
 
